--- a/Assets/UI/MainHUD.uxml
+++ b/Assets/UI/MainHUD.uxml
@@ -1,8 +1,11 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/HUDStyles.uss?fileID=7433441132597879392&amp;guid=ecb2c9c2e9a737a439a5880469a4dea6&amp;type=3#HUDStyles" />
-    <ui:VisualElement style="width: 100%; height: 100%; flex-direction: column;">
-        <ui:VisualElement name="container" style="bottom: auto; top: auto; width: 100%; height: 200px; position: relative; flex-direction: column; flex-basis: auto; justify-content: center; align-items: auto; flex-shrink: 1; background-color: rgba(255, 255, 255, 0);">
+    <ui:VisualElement name="Screen" style="width: 100%; height: 100%; flex-direction: column;">
+        <ui:VisualElement name="top-container" style="bottom: auto; top: auto; width: 100%; height: 200px; position: relative; flex-direction: column; flex-basis: auto; justify-content: center; align-items: auto; flex-shrink: 1; background-color: rgba(255, 255, 255, 0);">
             <ui:VisualElement name="heart-container" style="width: 30%; background-color: rgba(32, 32, 32, 0); height: 150px; flex-wrap: wrap; flex-direction: row; align-items: flex-start; flex-basis: auto; margin-right: 0; padding-left: 0; padding-right: 0; padding-top: 0; padding-bottom: 0; justify-content: flex-start;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="dialogue-container" style="bottom: 10%; position: absolute; width: 75%; height: 400px; left: 12.5%; right: auto; background-color: rgba(159, 155, 89, 0.5); border-left-color: rgba(255, 255, 255, 0); border-right-color: rgba(255, 255, 255, 0); border-top-color: rgba(255, 255, 255, 0); border-bottom-color: rgba(255, 255, 255, 0); border-left-width: 0; border-right-width: 0; border-top-width: 0; border-bottom-width: 0; border-top-left-radius: 25px; border-bottom-left-radius: 25px; border-top-right-radius: 25px; border-bottom-right-radius: 25px; visibility: hidden;">
+            <ui:Label text="It&apos;s dangerous to go alone! Take this." display-tooltip-when-elided="false" class="dialogue dialogue-text" style="font-size: 70px;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
