--- a/Assets/UI/HUDStyles.uss
+++ b/Assets/UI/HUDStyles.uss
@@ -35,28 +35,17 @@
 }
 
 .dialogue-text {
+    font-size: 70px;
+    visibility: visible;
+    -unity-font: url('project://database/Assets/Fonts/KarmaSuture.ttf?fileID=12800000&guid=23cde24e93ca44148b9e4317afd4e15a&type=3#KarmaSuture');
+    color: rgb(0, 85, 115);
+    -unity-text-align: middle-left;
+    display: flex;
     width: 100%;
     height: 100%;
-    -unity-font: url('project://database/Assets/Fonts/VCR_OSD_MONO.ttf?fileID=12800000&guid=656e3cb32989ed54fa5cd8aca7d5d7c8&type=3#VCR_OSD_MONO');
-    -unity-font-definition: none;
-    font-size: 70px;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
     white-space: normal;
-    -unity-text-align: middle-left;
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    -unity-font-style: bold;
-    -unity-text-outline-width: 0;
-    text-shadow: 3px 3px 0 rgb(0, 0, 0);
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    color: rgb(164, 164, 164);
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    -unity-text-outline-color: rgb(0, 0, 0);
 }
